fix(*):query功能，dubbo异常输出功能